<resources>
    <string name="app_name">Test</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="music">Music</string>
    <string name="播放">播放</string>
    <string name="暂停">暂停</string>
    <string name="绑定">绑定</string>
    <string name="解绑">解绑</string>
    <string name="yh">身份证识别</string>
</resources>